created formatDay function

--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 56%, rgba(
     margin-top: 20px;
     text-align: center;
     color: black;
+    display: inline;
  }
- .weather-forecast-date {
-    font-size: 16px;
+ .weather-forecast-date  {
+    font-size: 15px;
     opacity: 0.6;
  }
  .weather-forecast-temparatures {
@@ -99,4 +100,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 56%, rgba(
  }
 .weather-forecast-temparatures-min {
     opacity: 0.6;
+}
+img {
+    width: 100%;
 }
